# nighthawk

./: .gitignore  CMakeLists.txt  CMakePresets.json  makefile  pbr.fragt  pbr.vertt  setup-env.sh  vcpkg.json
lib/: CMakeLists.txt
src/: main.cpp
src/engine/: CMakeLists.txt  engine.cpp  engine.h
src/engine/lib/: CMakeLists.txt
src/shaders/: triangle.frag  triangle.vert
src/utils/: shaderManager.cpp
